--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
                         </div>
                     </div>
                     <a href = "#">Forgot Password?</a>
+                    <div class="usertype">
+                        Select user type: <select name="usertype">
+                            <option value="user">User</option>
+                            <option value="traffic_officer">Traffic Officer</option>
+                        </select>
+                    </div>
                     <input type ="submit" class = "btn" value = "Login"> 
                 </form>
             </div>
